# logbook

./: .gitignore  AGENTRULES.md  README.md  TODO.md  start.sh
docs/: application-pages-setup.md  index.html  map_data.geojson  metrics-plan-efficiency-variance.md  part117-compliance-plan.md
docs/apps/: faa.html  summary.html  swa.html  ual.html
logbook-tools/: .env.example  .gitignore  README.md  pyproject.toml
logbook-tools/logbook_import/: __init__.py
logbook-tools/scripts/: backup_airtable.py  import_legacy.py  seed_airports.py  validate_apps.py
logbook-tools/src/logbook_import/: __init__.py  airport_map.py  airtable_airports.py  airtable_fields.py  airtable_mapper.py  airtable_settings.py  airtable_sync.py  app_config.py  app_families.py  app_report.py  cli.py  config.py  dry_run.py  import_planner.py  keys.py  leg_classifier.py  models.py  night_enrichment.py  server.py  time_utils.py
logbook-tools/src/logbook_import/parsers/: __init__.py  merge.py  registry.py  skedplus_csv.py  skedplus_txt.py
logbook-tools/src/logbook_import/web/: base.html  config.html  dashboard.html  import_page.html  map.html
logbook-tools/tests/: conftest.py  test_airport_map.py  test_airtable_mapper.py  test_airtable_sync.py  test_app_report.py  test_cli_update_flags.py  test_config.py  test_dev_bootstrap.py  test_import_planner.py  test_keys.py  test_leg_classifier.py  test_merge.py  test_night_enrichment.py  test_skedplus_csv.py  test_skedplus_txt.py  test_time_utils.py
scripts/: update-map.sh
skedplus-to-calendar-workspace/iteration-1/: benchmark.json  benchmark.md
(+15 files in other folders)
